# deduplidog

./: 404.html  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  tests.py
.github/workflows/: python-publish.yml  run-unittest.yml
Changelog/: index.html
Overview/: index.html
Utils/: index.html
asset/: warnings_confirmation_example.avif
deduplidog/: __main__.py  cli.py  deduplidog.py  helpers.py  tui.py  utils.py
docs/: Changelog.md  Overview.md  Utils.md  index.md
search/: search_index.json
tests/: setup.py  test_deduplidog.py  test_disk.py  test_media_magic.py
tests/test_data/disk/folder1/: symlinkable.txt
