[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "deduplidog"
version = "0.6.2"
description = "Yet another file deduplicator"
authors = ["Edvard Rejthar <edvard.rejthar@nic.cz>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/CZ-NIC/deduplidog"
readme = "README.md"

[tool.poetry.dependencies]
click = "~=8.1.7"
dataclass_click = "~=1.0.2"
python = ">=3.11"
humanize = "*"
imagehash = "*"
IPython = "*"
ipywidgets = "*"
opencv-python = "*"
Pillow = "*"
pillow-heif = "*"
textual = "~=0.52"  # TODO check bigger version; or rather migrate to mininterface
sh = "*"
tqdm = "*"

[tool.poetry.scripts]
deduplidog= "deduplidog.__main__:main"
